# CoreVector

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
benchmarks/: benchmark_concurrency.cpp  benchmark_hnsw.cpp  benchmark_math.cpp  benchmark_network.cpp
include/: flat_index.hpp  hnsw_index.hpp  math_simd.hpp  types.hpp  vector.hpp
proto/: vector_db.proto
scripts/: client.py  vector_db_pb2.py  vector_db_pb2_grpc.py
src/: main.cpp  server.cpp
tests/: test_flat_index.cpp  test_hnsw.cpp  test_mmap.cpp  test_serialization.cpp  test_vector_math.cpp
